# WavCultStrip

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: BusCompressor.cpp  BusCompressor.h  CLACompressor.cpp  CLACompressor.h  DelayEngine.cpp  DelayEngine.h  NoiseGate.cpp  NoiseGate.h  ReverbEngine.cpp  ReverbEngine.h  SSLChannelEQ.cpp  SSLChannelEQ.h  Saturation.cpp  Saturation.h
installer/mac/: build_pkg.sh
installer/win/: installer.iss
